# rpl_hello_world

./: .gitignore  CMakeLists.txt  Makefile  README.md  hello_world_demo.c  mkwuhb.sh
.devcontainer/: Dockerfile  devcontainer.json
demo/: meta.xml
include/: dlfcn.h
include/elfio/: elfio.hpp
include/module/: ModuleData.h  SymbolData.h
lib/libhello/: exports.def  lib_hello.c  lib_hello.h
libhello/: CMakeLists.txt  exports.def  lib_hello.c  lib_hello.h
source/: dlfcn.cpp  dlfcn.h  logger.c  logger.h  main.cpp  wiiu_zlib.hpp
source/elfio/: elf_types.hpp
